tests/ui/ext-nonexistent.stderr
error: cannot find macro `iamnotanextensionthatexists`
  --> $DIR/ext-nonexistent.rs:2:13
   |
LL | fn main() { iamnotanextensionthatexists!(""); }
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

