tests/ui/ext-nonexistent.rs
//@error-in-other-file:cannot find macro
fn main() { iamnotanextensionthatexists!(""); }
